--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -15,11 +15,11 @@ form:invalid select:required {
 }
 
 .main-content {
-    @apply overflow-y-auto px-12;
+    @apply overflow-y-auto;
 }
 
 .container {
-    @apply lg:max-w-3xl lg:mx-auto bg-white shadow px-8 py-6 space-y-3;
+    @apply lg:max-w-3xl lg:mx-auto bg-white shadow px-8 py-6 border space-y-3;
 }
 
 .form-control {
@@ -55,6 +55,10 @@ form:invalid select:required {
     @apply text-green-800 border-t-4 border-green-300 bg-green-50;
 }
 
+.alert-warning {
+    @apply text-red-800 border-t-4 border-red-300 bg-red-50;
+}
+
 .alert-btn-dismiss {
     @apply ml-auto -mx-1.5 -my-1.5 rounded-lg focus:ring-2 inline-flex items-center justify-center h-8 w-8;
 }
@@ -63,8 +67,12 @@ form:invalid select:required {
     @apply bg-green-50 text-green-500 focus:ring-green-400 p-1.5 hover:bg-green-200;
 }
 
+.alert-btn-dismiss-warning {
+    @apply bg-red-50 text-red-500 focus:ring-red-400 p-1.5 hover:bg-red-200;
+}
+
 /* Menu */
 
 .menu-item {
-    @apply flex items-center gap-3 border rounded shadow text-center bg-white p-4;
+    @apply flex items-center gap-3 mx-auto w-full md:w-[450px] lg:w-full border rounded shadow bg-white px-3 py-2 md:p-4 text-sm md:text-base;
 }
