--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -23,27 +23,31 @@ input[type='checkbox'] {
 }
 
 .main-content {
-    @apply overflow-y-auto;
+    @apply overflow-y-auto px-4 md:px-12;
 }
 
 .container {
-    @apply lg:max-w-3xl lg:mx-auto bg-white shadow px-8 py-6 border space-y-3;
+    @apply px-4 py-6 border shadow space-y-3 bg-white sm:px-8 lg:max-w-3xl lg:mx-auto;
 }
 
 .form-control {
-    @apply w-full p-2.5 block text-sm border border-gray-300 rounded shadow-sm focus:border-gray-300 focus:ring-0;
+    @apply w-full p-2.5 block text-xs sm:text-sm border border-gray-300 rounded shadow-sm focus:border-gray-300 focus:ring-0;
+}
+
+.btn {
+    @apply px-4 py-2 rounded text-xs sm:px-6 sm:text-sm;
 }
 
 .btn-success {
-    @apply h-10 px-9 rounded bg-green-600 text-white hover:bg-green-800;
+    @apply text-white bg-green-600 hover:bg-green-800;
 }
 
 .btn-secondary {
-    @apply h-10 px-9 rounded bg-gray-600 text-white hover:bg-gray-800;
+    @apply bg-gray-600 text-white hover:bg-gray-800;
 }
 
 .btn-light {
-    @apply h-10 px-9 rounded bg-gray-200 text-white;
+    @apply bg-gray-200 text-white;
 }
 
 .btn-alert {
@@ -86,13 +90,17 @@ input[type='checkbox'] {
 /* Menu */
 
 .menu-item {
-    @apply flex items-center gap-3 mx-auto w-full md:w-[450px] lg:w-full border rounded shadow bg-white px-3 py-2 md:p-4 text-sm md:text-base;
+    @apply flex items-center gap-3 mx-auto w-full md:w-[450px] lg:w-full border rounded shadow bg-white px-3 py-2 md:p-4 text-xs sm:text-base;
+}
+
+.icon  {
+    @apply text-sm md:text-xl text-yellow-500;
 }
 
 /* Patient Info */
 
 .patient-info {
-    @apply flex-1 text-sm text-gray-500 space-y-2;
+    @apply flex-1 text-xs sm:text-sm text-gray-500 space-y-2;
 }
 
 .patient-info-item {
@@ -106,7 +114,7 @@ input[type='checkbox'] {
 /* Badge */
 
 .badge {
-    @apply inline-flex items-center px-2 py-1 text-sm font-medium rounded;
+    @apply inline-flex items-center px-2 py-1 text-xs sm:text-sm font-medium rounded;
 }
 
 .badge-dark {
