--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    html {
+        font-family: 'Roboto', 'Open Sans', sans-serif;
+    }
+}
+
 main {
     height: calc(100vh - 8rem);
 }
