--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -139,7 +139,10 @@ input[type='checkbox'] {
     @apply text-white bg-red-600;
 }
 
-
 .dropdown {
     @apply w-full border rounded shadow-sm absolute mt-2 p-2.5 border-gray-300 bg-white overflow-y-auto z-50 text-gray-500;
+}
+
+.container-patients {
+    @apply my-8 grid grid-cols-1 md:grid-cols-2 gap-4 xl:grid-cols-3 mx-auto xl:max-w-7xl;
 }
