--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -146,3 +146,7 @@ input[type='checkbox'] {
 .container-patients {
     @apply my-8 grid grid-cols-1 md:grid-cols-2 gap-4 xl:grid-cols-3 mx-auto xl:max-w-7xl;
 }
+
+.group-parameter {
+    @apply flex items-center gap-3;
+}
