--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -20,6 +20,10 @@ form:invalid select:required {
     @apply w-full border-red-500 rounded shadow-sm focus:border-red-500 focus:ring-0;
 }
 
+form:invalid textarea:required {
+    @apply w-full border-red-500 rounded shadow-sm focus:border-red-500 focus:ring-0;
+}
+
 select {
     @apply text-gray-500;
 }
