--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -187,6 +187,13 @@ input[type='checkbox'] {
     @apply badge bg-yellow-200 text-black;
 }
 
-.Toastify__toast-container {
-    @apply w-fit;
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 0.5rem;
+    height: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #f0f1f3;
+    border-radius: 0.8rem;
 }
